--- a/Front/src/app/dashboard/dashboard.component.html
+++ b/Front/src/app/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
                         <mat-icon mat-list-icon>space_dashboard</mat-icon>
                         <p mat-line> Mi Solicitud </p>
                     </mat-list-item>
-                    <mat-list-item *ngIf="role === 'moderator' || role === 'admin'" routerLinkActive="active" routerLink="/dashboard/solicitudes" class="x aa">
+                    <mat-list-item *ngIf="role === 'moderator'" routerLinkActive="active" routerLink="/dashboard/solicitudes" class="x aa">
                         <mat-icon mat-list-icon>space_dashboard</mat-icon>
                         <p mat-line> Para Estudio </p>
                     </mat-list-item>
@@ -54,7 +54,7 @@
                         <mat-icon mat-list-icon>space_dashboard</mat-icon>
                         <p mat-line> Aprobados </p>
                     </mat-list-item>
-                    <mat-list-item *ngIf="role === 'moderator' || role === 'admin'" routerLinkActive="active" routerLink="/dashboard/rechazados" class="x aa">
+                    <mat-list-item *ngIf="role === 'moderator'" routerLinkActive="active" routerLink="/dashboard/rechazados" class="x aa">
                         <mat-icon mat-list-icon>space_dashboard</mat-icon>
                         <p mat-line> Rechazados </p>
                     </mat-list-item>
