--- a/Front/src/app/dashboard/estudio/estudio.component.html
+++ b/Front/src/app/dashboard/estudio/estudio.component.html
@@ -9,7 +9,7 @@
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{usuario.name}} {{usuario.surname}}</mat-card-title>
     <mat-card-subtitle>{{usuario.email}}</mat-card-subtitle>
-    <mat-card-subtitle>Plazo: {{solicitud.time}}</mat-card-subtitle>
+    <mat-card-subtitle>Plazo: {{solicitud.time}} meses</mat-card-subtitle>
     <mat-card-subtitle>Solicitud: {{usuario.solicitud}}</mat-card-subtitle>
 
     <!-- Datos Personales -->
